# HFTExchange

./: .gitignore  README.md  REFERENCES.md
cpp-engine/: CMakeLists.txt  test_queue.cpp
cpp-engine/.cache/clangd/index/: LockFreeQueue.h.1F4E2D07B9C26905.idx  LockFreeQueue.inl.16F1B0C491319205.idx  LockFreeQueueTest.cpp.5434DE638C064824.idx  MatchingEngine.cpp.180EF98D4AD329E9.idx  MatchingEngine.h.0490D7C2EEA9F4CC.idx  MatchingEngineTest.cpp.984A6796EE541705.idx  MemoryPool.h.9A0CEE7E272B27E5.idx  MemoryPool.inl.21F9DC0430D69DF4.idx  MemoryPoolTest.cpp.B977D898550DA460.idx  Order.h.EA4F119EAFE20E5A.idx  OrderBook.cpp.EA33306670271200.idx  OrderBook.h.F70BB27D08E01CE2.idx  OrderBookTest.cpp.FEC584243D3F9089.idx  Placeholder.cpp.8925344917EC3F8A.idx  QueueBenchmark.cpp.FD71349BDFDA27FD.idx  engine.cpp.7E1B3FF7A2D2AAA7.idx
cpp-engine/benchmarks/: Placeholder.cpp  QueueBenchmark.cpp
cpp-engine/include/: LockFreeQueue.h  LockFreeQueue.inl  MatchingEngine.h  MemoryPool.h  MemoryPool.inl  Order.h  OrderBook.h
cpp-engine/src/: MatchingEngine.cpp  OrderBook.cpp  engine.cpp
cpp-engine/tests/: LockFreeQueueTest.cpp  MatchingEngineTest.cpp  MemoryPoolTest.cpp  OrderBookTest.cpp
ffm-bridge/include/: HFTBridge.h
ffm-bridge/src/: HFTBridge.cpp
java-simulation/: pom.xml
java-simulation/src/main/java/agents/: MarketMakerAgent.java  MomentumAgent.java  TradingAgent.java
java-simulation/src/main/java/core/: FFMBridgeImpl.java  HFTBridge.java  IncomingMsgLayout.java  MarketDataEvent.java  MarketDataReplay.java  NativeOutboundQueueImpl.java  NativeSPSCQueue.java  NativeSPSCQueueImpl.java  SimulationEngine.java  TradeMsg.java  TradeMsgLayout.java
java-simulation/src/main/java/risk/: RiskGate.java
java-simulation/src/test/java/core/: FFMBridgeTest.java  SimulationEngineTest.java
java-simulation/src/test/java/risk/: RiskGateTest.java
